--- a/src/styles/Notes.css
+++ b/src/styles/Notes.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+
 }
 
 .note {
@@ -14,6 +15,9 @@
   flex-direction: column;
   justify-content: space-between;
   white-space: pre-wrap;
+  animation-name: noteAppereance;
+  animation-duration: 1.8s;
+  animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .note-footer {
@@ -52,3 +56,16 @@
   background-color: #ededed;
   cursor: pointer;
 }
+
+
+@keyframes noteAppereance {
+  from {
+    opacity: 0;
+    margin-left: 300px;
+  } to {
+    opacity: 1;
+    margin-left: 0;
+  }
+}
+
+
